# rust_microservices

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.cargo/: config.toml
benchmarks/scripts/: compare_results.py  python_benchmark.py
docs/: HUGGINGFACE_TCH_GUIDE.md  TCH_SETUP.md  TCH_USAGE_GUIDE.md  TESTING_GUIDE.md
examples/: test_mps.rs
llamafirewall/: Cargo.toml
llamafirewall-core/: Cargo.toml
llamafirewall-core/src/: config.rs  error.rs  firewall.rs  lib.rs  scanner.rs  types.rs  utils.rs
llamafirewall-core/tests/: memory_leak_tests.rs  property_tests.rs  python_compat_test_data.json  python_compatibility.rs
llamafirewall-ml/: Cargo.toml  build.rs
llamafirewall-ml/benches/: inference_bench.rs
llamafirewall-ml/src/: engine.rs  lib.rs  tch_inference.rs  tch_loader.rs
llamafirewall-scanners/: Cargo.toml
llamafirewall-scanners/benches/: promptguard_bench.rs
llamafirewall-scanners/src/: codeshield_scanner.rs  hidden_ascii_scanner.rs  lib.rs  promptguard_scanner.rs  regex_scanner.rs  semgrep_cli.rs
llamafirewall-scanners/tests/: codeshield_integration.rs  promptguard_integration.rs
llamafirewall/benches/: comprehensive_bench.rs
llamafirewall/examples/: onnx_quickstart.rs  promptguard_perf.rs  unified_backend.rs
llamafirewall/src/: lib.rs
llamafirewall/tests/: feature_parity.rs
scripts/: run-integration-tests.sh  verify-libtorch.sh
tests/: integration_suite.rs  model_loading.rs  mps_detection.rs  stress_tests.rs  tch_sanity_check.rs
