[workspace]
members = [
    "llamafirewall-core",      # Core types and traits
    "llamafirewall-scanners",  # Scanner implementations
    "llamafirewall-ml",        # ML infrastructure
    "llamafirewall",           # Main library (re-exports)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["LlamaFirewall Contributors"]
license = "MIT"
repository = "https://github.com/meta-llama/PurpleLlama"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"

# Async trait support
async-trait = "0.1"

# ML dependencies (tch-rs - PyTorch backend)
# Upgraded to 0.19.0 for compatibility with PyTorch 2.8.0
tch = "0.19"
tokenizers = "0.22"
hf-hub = { version = "0.4", features = ["tokio"] }

# Pattern matching
regex = "1.10"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Parallel processing
rayon = "1.10"

# Tree-sitter for code analysis
tree-sitter = "0.22"
tree-sitter-python = "0.22"
tree-sitter-javascript = "0.22"
tree-sitter-java = "0.22"
tree-sitter-go = "0.22"
tree-sitter-rust = "0.22"
tree-sitter-c = "0.22"
tree-sitter-cpp = "0.22"

# Testing utilities
tempfile = "3.12"

# Testing frameworks
criterion = "0.5"
proptest = "1.5"
